--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -23,8 +23,7 @@ jobs:
     if: ${{ contains(github.event.commits[0].modified, 'environments/dev/') }}
     environment: development
     steps:
-      # ... (Terraform steps for dev, working directory: environments/dev) ...
-
+      - uses: ../../actions/composite/action.yml
   staging:
     name: Terraform Staging
     runs-on: ubuntu-latest
@@ -32,8 +31,7 @@ jobs:
     if: ${{ contains(github.event.commits[0].modified, 'environments/staging/') }}
     environment: staging
     steps:
-      # ... (Terraform steps for staging, working directory: environments/staging) ...
-
+      - uses: ../../actions/composite/action.yml
   prod:
     name: Terraform Prod
     runs-on: ubuntu-latest
@@ -41,4 +39,4 @@ jobs:
     if: ${{ contains(github.event.commits[0].modified, 'environments/prod/') }}
     environment: production
     steps:
-      # ... (Terraform steps for prod, working directory: environments/prod) ...
+      - uses: ../../actions/composite/action.yml
