--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -23,7 +23,8 @@ jobs:
     if: ${{ contains(github.event.commits[0].modified, 'environments/dev/') }}
     environment: development
     steps:
-      - uses: ./.github/actions/composite
+      - name: Run Terraform
+        uses: alok-servicetitan/terraform-test/actions/composite@main
   staging:
     name: Terraform Staging
     runs-on: ubuntu-latest
@@ -31,12 +32,13 @@ jobs:
     if: ${{ contains(github.event.commits[0].modified, 'environments/staging/') }}
     environment: staging
     steps:
-      - uses: ./.github/actions/composite
-  prod:
+      - name: Run Terraform
+        uses: alok-servicetitan/terraform-test/actions/composite@main  prod:
     name: Terraform Prod
     runs-on: ubuntu-latest
     needs: staging
     if: ${{ contains(github.event.commits[0].modified, 'environments/prod/') }}
     environment: production
     steps:
-      - uses: ./.github/actions/composite
+      - name: Run Terraform
+        uses: alok-servicetitan/terraform-test/actions/composite@main
