PLATZ-650 - Changing workflows

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -21,7 +21,7 @@ jobs:
     name: Terraform Dev
     runs-on: ubuntu-latest
     #if: ${{ contains(github.event.commits[0].modified, 'environments/dev/') }}
-    environment: dev
+    #environment: dev
     steps:
       - name: Run Terraform
         uses: alok-servicetitan/terraform-test/actions/composite@main
