--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -19,7 +19,7 @@ env:
 jobs:
   debug:
     name: Debug
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     #environment: dev
     steps:
       - name: COmmit id
