--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -23,7 +23,7 @@ jobs:
     #environment: dev
     steps:
       - name: COmmit id
-        run: echo ${{ github.event.commits[0].modified }}
+        run: echo ${{ github.event.commits }}
   dev:
     name: Terraform Dev
     runs-on: ubuntu-latest
