--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -22,6 +22,10 @@ jobs:
     runs-on: ubuntu-24.04
     #environment: dev
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 2  # Important for git diff to work correctly
       - name: COmmit id
         run: echo ${{ github.event.commits[0].modified[*].filename }}
       - name: Get changed files
