--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -36,7 +36,8 @@ jobs:
 
           # Convert the list to a JSON array
           changed_files_array=$(echo "$changed_files" | jq -R -s -c 'split("\n")[:-1]')
-
+          
+          echo changed_files_array
           # Set the output variable
           echo "::set-output name=files::$changed_files_array"    
     outputs:
