--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -37,7 +37,7 @@ jobs:
           # Convert the list to a JSON array
           changed_files_array=$(echo "$changed_files" | jq -R -s -c 'split("\n")[:-1]')
           
-          echo changed_files_array
+          echo $changed_files
           # Set the output variable
           echo "::set-output name=files::$changed_files_array"    
     outputs:
