--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -40,8 +40,8 @@ jobs:
           echo $changed_files
           # Set the output variable
           echo "::set-output name=files::$changed_files_array"    
-  #  outputs:
-  #    matrix: ${{ steps.changed-files.outputs.matrix }} 
+    outputs:
+      matrix: ${{ steps.changed-files.outputs.files }} 
   dev:
     name: Terraform Dev
     runs-on: ubuntu-latest
@@ -52,7 +52,7 @@ jobs:
         uses: alok-servicetitan/terraform-test/actions/composite@main
       - name: Get the output files
         id: out
-        run: echo ${{ files }}
+        run: echo ${{ debug.files }}
   staging:
     name: Terraform Staging
     runs-on: ubuntu-latest
